# internal/tryout/route.go
@@ -12,6 +12,7 @@ func RegisterRoutes(r fiber.Router, handler *Handler) {
 	tryout.Put("/attempt/:attempt_token/answers", handler.SaveAnswers)
 	tryout.Post("/attempt/:attempt_token/submit", handler.SubmitTryout)
 	tryout.Get("/attempt/:attempt_token/resume", handler.ResumeTryout)
+	tryout.Get("/is_ongoing", handler.GetOngoingTryout)
 	tryout.Get("/report", handler.GetReports)
 	tryout.Get("/report/:attempt_token", handler.GetReview)
 	tryout.Get("/:id_tryout/leaderboard", handler.GetGlobalLeaderboard)
